profiling-using-exp-runner/backup_FINAL_RESULTS/uniquepaths_experiment_1/run_6_repetition_0/energibridge.log
sampling interval: 200, target function: unique_paths, input size: 9
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.uniquepaths as module; up = UniquePaths(); up.unique_paths(9,9); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.013676555633545 for 0.22726423 sec of execution.
